client/src/components/Applications/AppBrowser/AppBrowser.scss
#appBrowser-wrapper {
  /* As a flex item */
  flex-grow: 1;
  flex-shrink: 0; /* Prevent Safari from shrinking this element (FP-389) */

  /* As a flex container */
  display: flex;
  flex-direction: row;
  align-items: stretch;

  border-bottom: 1px solid #707070;
}
#appBrowser-sidebar,
#appBrowser-tray .apps-grid-list {
  --vertical-buffer: 10px;
  --max-item-count: 5;
  --item-height: 35px; /* (~30px design * 1.2 design-to-app ratio) */
  /* i.e. ( items * item height ) + ( top space & bottom space ) */
  --height: calc(( var(--max-item-count) * var(--item-height) ) + ( var(--vertical-buffer) * 2 ));

  display: inline-grid;
  grid-auto-flow: column;
  grid-template-rows: repeat(var(--max-item-count), min-content);
  height: var(--height);
  padding-top: var(--vertical-buffer);
  padding-bottom: var(--vertical-buffer);
}

#appBrowser-sidebar,
#appBrowser-tray {
  --horizontal-buffer: var(--global-space--section-left);
}
#appBrowser-sidebar {
  --min-width: 200px;

  margin-left: calc(var(--horizontal-buffer) * -1);
  border-right: 1px solid rgba(112, 112, 112, 0.25);
}
/* Overwrite browser styles */
/* FAQ: Combining ID and classname is overspecific, but it is accurate,
        because only with `ul` should these styles be overwritten */
ul#appBrowser-sidebar {
  padding-left: 0;
  list-style: none;
}

#appBrowser-sidebar .nav-link,
#appBrowser-tray .nav-link {
  min-width: var(--min-width);
  padding-left: var(--horizontal-buffer);
  color: #707070;

  white-space: nowrap;
}
#appBrowser-sidebar .nav-link {
  /* RFE: Add `href` on links to: obviate this CSS, provide URL to app state */
  cursor: pointer;
}

#appBrowser-sidebar .nav-link.active,
#appBrowser-tray .nav-link.active {
  background: var(--global-color-accent--weak);
  border: none;
}

#appBrowser-sidebar .nav-link:hover,
#appBrowser-tray .nav-link:hover {
  background: var(--global-color-accent--weak);
  border: none;
}

#appBrowser-tray {
  flex-grow: 1;

  background-color: #f4f4f4;
}

#appBrowser-sidebar .nav-text,
#appBrowser-tray .nav-text {
  padding-left: 15px;
  font-size: 0.75rem; /* 12px (10px design * 1.2 design-to-app ratio) */
  font-weight: 500;
}

